Overlap fixes

--- a/themes/serious_business/serious_business.css
+++ b/themes/serious_business/serious_business.css
@@ -15,7 +15,7 @@
 	font-weight: bold;
 	font-family: Courier New;
 	background-color: transparent;
-	padding-left: 12px;
+	padding-left: 24px;
 }
 .QMenuBar#menubar::item::selected{
 	background-color: transparent;
